top/.emacs.d/lisp/mycomp.txt
* Introduction  -*-compilation-*-
Compilation started at Sat Jul  8 15:19:25

See also compilation.txt, "example file" in C-h C-v compilation-error-regexp-alist

----------------------------------------------------------------
-- Node.js
----------------------------------------------------------------

Node seems to always prefix user files with "/".  The initial line is
usually not of interest, but not easy to skip with this regexp-alist.


### A: Uncaught exceptions (Node v16.10.0 w/ES modules)

Error: Assertion failed!
    at assert (file:///Users/bhk/src/test.js:215:9)
    at Text.set textContent [as textContent] (file:///Users/bhk/src/test.js:156:9)
    at new Text (file:///Users/bhk/src/test.js:224:26)


### B:  `import` error (Node v16.10.0)
### Note: the 'gnu regex matches the first "at ... (node:...)" line...

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/Users/bhk/src/irk/eventutils.js' imported from /Users/bhk/src/irk/grid.js
    at new NodeError (node:internal/errors:371:5)
    at finalizeResolution (node:internal/modules/esm/resolve:416:11)


### C: Syntax Errors

file:///Users/bhk/foo.js:1125
);
^

SyntaxError: missing ) after argument list
    at Loader.moduleStrategy (node:internal/modules/esm/translators:147:18)
    at async link (node:internal/modules/esm/module_job:48:21)


### D: Uncaught exceptions (non-module?)

/Users/bkelley/p/dev/js/myassert_q.js:3
)
^

node.js:134
        throw e; // process.nextTick error, or 'error' event on first tick
        ^
ReferenceError: blah is not defined
    at /Users/bkelley/foo.js:4:
    at file:///Users/bkelley/foo.js:5:4:
    at Object.CALL_NON_FUNCTION (native)
    at Object.<anonymous> (/Users/bkelley/foo.js:4:1)
    at Module._compile (module.js:402:26)

----------------------------------------------------------------
-- Rollup.js
----------------------------------------------------------------

[!] Error: Unexpected token
idemo.js (74:5)
72:         // Time
73:         E({$tag: "pre"}, opts.subjectTime),
74:     ]});

----------------------------------------------------------------
-- Terser (JS minifier)
----------------------------------------------------------------

Parse error at .out/game.min.js.stripped:681,10
    await import('fs');
          ^

----------------------------------------------------------------
-- gcc / g++
----------------------------------------------------------------

game.cpp:68:1: error: unknown type name 'a'
a
^
1 error generated.

In file included from kprocess.c:3:0:
foo.h: In function 'GCCIsAMovingTarget':
foo.h:29:27: error: GCC version 4.6 now uses this format.

----------------------------------------------------------------
-- GNU Emacs
----------------------------------------------------------------

tree.el:1:1:Error: Invalid read syntax: ")"
tree_q.el:5:1:Warning: cl package required at runtime


----------------------------------------------------------------
-- SCAM
----------------------------------------------------------------

euler.scm:6:1: unmatched ")"
)
^

----------------------------------------------------------------
-- Lua
----------------------------------------------------------------

../lua/.out/exports/bin/lua: fsu_q.lua:12: syntax error near 'T'

/Users/bkelley/p4/apiOne/main/build/tools/Darwin/lua/LUA: object_q.lua:15: assertion failed!
stack traceback:
	[C]: in function 'assert'
	object_q.lua:15: in function 'fn'
	object_q.lua:74: in main chunk
	[C]: ?


----------------------------------------------------------------
-- Previously-supported...
----------------------------------------------------------------


Assertion failed: (17 == itest_empty(o)), function mainInThread, file kserver_q.c, line 58.

In file included from kprocess.c:3:
which.c(8) : fatal error C1083: Cannot open include file: 'unistd.h': No such file or directory

In file included from kprocess.c:3:0:
foo.h: In function 'GCCIsAMovingTarget':
foo.h:29:27: error: GCC version 4.6 now uses this format.

blah: c:\Documents and Settings\user\x.c:39: blah
blah: c:/Documents and Settings/user/x.c:39: blah
c:\Documents and Settings\user\x.c:39: blah
c:/Documents and Settings/user/x.c:39: blah
c:/foo.c:39: blah
blah: c:/foo.c:39: blah
/foo.c:39: blah
foo.c:39: blah
../foo.c:39: blah
blah /foo.c:23:0:4: blah
blah foo.c:34:1:3:4: blah

/Users/bkelley/p4/apiOne/main/build/tools/Darwin/lua/LUA: object_q.lua:15: assertion failed!
stack traceback:
	[C]: in function 'assert'
	object_q.lua:15: in function 'fn'
	object_q.lua:74: in main chunk
	[C]: ?


"tc.c", line 5: Serious error: C2284E: expected ';' after command - inserted before ')'
"tc.c", line 5: Serious error: C2304E: <command> expected but found ')'


foo.idl:1: Error: missing expected output line [(?-mix:12.7-11: unknown comment preset 'bogus')]
foo.idl:1: Error: missing expected output line [(?-mix:13.7-12: unknown comment preset 'bogus2')]

Bash: Match this:
./runtest.sh: line 22: touchfile: command not found
script.sh: line 1: 73293 Segmentation fault: 11  .built_/Exe/testInvoke
  ... but not this:
/bin/sh: line 1: 73293 Segmentation fault: 11  .built_/Exe/testInvoke
